<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="vault_show_password">Show password</string>
    <string name="vault_hide_password">Hide password</string>
</resources>
